upgraded java version to jdk 25